[package]
name = "elif-orm"
version = "0.7.0"
edition = "2021"
description = "Production-ready ORM with migrations, database services, connection pooling, and query builder"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-orm"
keywords = ["orm", "database", "web", "framework", "sql"]
categories = ["web-programming", "database"]

[dependencies]
elif-core = { version = "0.5.0", path = "../core" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
dashmap = "5.5"
url = "2.4"
rand = "0.8"
once_cell = "1.19"
sqlparser = "0.49"
service-builder = "0.3.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "simple_benchmark"
harness = false

[[bench]]
name = "performance_comparison"
harness = false

[[bench]]
name = "hydration_comparison"
harness = false